...
                android:hint="@string/last_name"
                android:textSize="16sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address_hint"
            android:textSize="16sp" />

        <LinearLayout
...
                style="@style/Widget.Spinner.Phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/phone_number_hint"
                android:textSize="16sp" />
        </LinearLayout>
...
