...
        <com.expedia.bookings.widget.traveler.TSAEntryView
            android:id="@+id/tsa_entry_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.expedia.bookings.widget.accessibility.AccessibleSpinner
            android:id="@+id/passport_country_spinner"
            style="@style/FakeSpinner.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@android:color/white"
            android:focusableInTouchMode="true"
            android:focusable="true"
...
            android:id="@+id/passport_country_layout_btn"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passport_country_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:drawableRight="@drawable/material_dropdown"
                android:hint="@string/passport_country"
                android:textIsSelectable="true"
...
