...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.expedia.bookings.widget.traveler.TravelerEditText
            android:id="@+id/redress_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/redress_number"
            android:inputType="number"
            android:maxLength="7"
            android:maxLines="1"
...
