...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/traveler_input_text_size"/>

    <com.expedia.bookings.widget.TravelerTextInput
        android:id="@+id/edit_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:singleLine="true"
...
