<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.expedia.bookings.widget.TravelerTextInput
        android:id="@+id/edit_birth_date_text_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/date_of_birth"
        android:drawableRight="@drawable/material_dropdown"
        android:inputType="none"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:textSize="@dimen/traveler_input_text_size"/>

    <Spinner android:id="@+id/edit_gender_spinner"
        style="@style/FakeSpinner.Light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:textStyle="normal"
        android:textSize="@dimen/traveler_input_text_size"
        android:popupBackground="#FFFFFF"/>
</merge>